--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Recursive:wght@700&family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Recursive:wght@400;700&family=Righteous&display=swap');
 
 body {
     background-color: #FB6B6B;
     font-family: 'Recursive', sans-serif;
     font-weight: 400;
+    color: #333333;
 }
 
 h1 {
+    margin: 25px 0 42px 0;
+    font-size: 36px;
     font-family: 'Righteous', cursive;
     color: #ffffff;
+}
+
+.home {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.home button {
+    width: 246px;
+    height: 54px;
+    font-size: 18px;
+    font-weight: 400;
+    font-family: 'Recursive', sans-serif;
+    background-color: #ffffff;
+    color: #D70900;
+    border: 1px solid #D70900;
+    border-radius: 5px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.quizz {
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+.quizz .brand {
+    margin: 51px 0;
+    display: flex;
+    align-items: center;
+}
+
+.brand img {
+    width: 52px;
+    height: 60px;
+}
+
+.brand h1 {
+    margin: 0 0 0 20px;
+}
+
+.question {
+    width: 300px;
+    height: 65px;
+    padding: 0 15px;
+    margin-bottom: 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #FFFFFF;
+    border-radius: 5px;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+}
+
+.question h3 {
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.question ion-icon {
+    font-size: 23px;
+    font-weight: 700;
+}
+
+.result {
+    width: 100%;
+    height: 70px;
+    font-size: 18px;
+    background-color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
