--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,7 @@ h1 {
     background-color: #FFFFFF;
     border-radius: 5px;
     box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
 }
 
 .question h3 {
@@ -114,6 +115,7 @@ h1 {
 .card ion-icon {
     font-size: 30px;
     margin-left: auto;
+    cursor: pointer;
 }
 
 .zap-buttons {
@@ -129,6 +131,7 @@ h1 {
     color: #FFFFFF;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .zap-buttons button[name="no"] {
