--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,7 @@ h1 {
     border: 1px solid #D70900;
     border-radius: 5px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
 }
 
 .quizz {
