Implements style for replied cards

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,3 +150,18 @@ h1 {
 .question:last-child, .card:last-child {
     margin-bottom: 120px;
 }
+
+.no {
+    color: #FF3030;
+    text-decoration-line: line-through;
+}
+
+.yes {
+    color: #2FBE34;
+    text-decoration-line: line-through;
+}
+
+.maybe {
+    color: #FF922E;
+    text-decoration-line: line-through;
+}
