--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,17 +83,27 @@ h1 {
     font-weight: 700;
 }
 
-.result {
+footer {
     width: 100%;
     height: 70px;
     font-size: 18px;
     background-color: #FFFFFF;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: fixed;
     bottom: 0;
     left: 0;
+}
+
+footer div {
+    margin-top: 5px;
+    display: flex;
+}
+
+footer ion-icon {
+    font-size: 23px;
 }
 
 .card {
@@ -156,12 +166,12 @@ h1 {
     text-decoration-line: line-through;
 }
 
-.yes {
-    color: #2FBE34;
+.maybe {
+    color: #FF922E;
     text-decoration-line: line-through;
 }
 
-.maybe {
-    color: #FF922E;
+.yes {
+    color: #2FBE34;
     text-decoration-line: line-through;
 }
