--- a/src/Components/Question/style.css
+++ b/src/Components/Question/style.css
@@ -8,6 +8,36 @@
     font-weight: 700;
 }
 
+.zap-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.zap-buttons button {
+    width: 86px;
+    height: 37px;
+    margin: 0;
+    padding: 0 12px;
+    font-size: 12px;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.zap-buttons button[name="no"] {
+    background-color: #FF3030;
+}
+
+.zap-buttons button[name="maybe"] {
+    background-color: #FF922E;
+}
+
+.zap-buttons button[name="yes"] {
+    background-color: #2FBE34;
+}
+
 .question:last-child, .card:last-child {
-    margin-bottom: 120px;
+    margin-bottom: 165px;
 }
