--- a/src/Components/Home/style.css
+++ b/src/Components/Home/style.css
@@ -19,3 +19,33 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
+
+.home input[type="text"] {
+    box-sizing: border-box;
+    width: 246px;
+    height: 43px;
+    margin-bottom: 18px;
+    padding-left: 11px;
+    font-size: 14px;
+    color: #FB6B6B;
+    font-family: 'Roboto', sans-serif;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 5px;
+}
+
+.home input[type="text"]::placeholder {
+    color: #ADADAD;
+}
+
+.home input[type="text"]:focus {
+    outline: none;
+}
+
+.home .unavailable {
+    border: none;
+    box-shadow: none;
+    color: #C0C0C0;
+    background-color: #E8E8E8;
+    pointer-events: none;
+}
